--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>My Times</title>
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="resources/images/img-myt-logo.jpg" alt="My Times Logo">
+        <p id="logo_name">My Times</p>
+      </div>
+      <nav>
+        <ul>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </ul>
+      </nav>
+    </header>
+    <div class="container">
+        <div class="column large">
+          <div class="story main">
+            <div class="img main">
+              <h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+            </div>
+            <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+          </div> <!-- end story main -->
+          <div class="sidebyside">
+            <div class="story orca">
+              <h2>Orca Spends Vacation at Land World Puget</h2>
+              <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+              <div class="img earth">
+                <h3>Earth Spins Backwards for 2017</h3>
+              </div>
+            </div>
+            <div class="story burger">
+              <h2>Burger for Breakfast: How Early is too Early?</h2>
+              <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+              <div class="img camera">
+                <h3>Research Shows Cameras Erase Memory</h3>
+              </div>
+            </div>
+          </div> <!-- end sidebyside  ** keeps 2 cols together ** -->
+        </div> <!-- end column large -->
+        <div class="column medium">
+          <div class="story fbi">
+            <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+            <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+          </div>
+          <div class="story cats">
+            <div class="img cats">
+              <h3>Cats in Control-Is It a Thing?</h3>
+            </div>
+            <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
+          </div>
+        </div>
+        <div class="column small">
+          <img src="resources/images/img-news-bite.png" alt="cookie image with bite">
+          <h4>NEWS BITES</h4>
+          <div id="bites_text">
+            <ul>
+              <li>Cat Emoji Goes Viral Buy Youtube</li>
+              <li>Views Home Business Advertising</li>
+              <li>Ideas Advertising Internet Online</li>
+              <li>Illustration in Marketing</li>
+              <li>Materials Finally a Top Secret Way You Can</li>
+            </ul>
+          </div> <!-- end bites_text -->
+        </div> <!-- end column small -->
+    </div> <!-- end container -->
+    <footer>
+      <div class="footer_container">
+        <div class="footer_firstline">
+          <p>MY Times</p>
+          <ul>
+            <li><a href="#">World</a></li>
+            <li><a href="#">U.S.</a></li>
+            <li><a href="#">Tech</a></li>
+            <li><a href="#">Science</a></li>
+          </ul>
+        </div> <!-- end footer_firstline -->
+        <div id="copyright">
+          <p>© 2016, My Times (A Division of Codecademy bite)</p>
+        </div>
+      </div> <!-- end footer_container -->
+    </footer>
+  </body>
+</html>
