--- a/index.html
+++ b/index.html
@@ -1,86 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tea Cozy</title>
-    <link rel="stylesheet" href="resources/css/style.css">
-  </head>
-  <body>
-    <header>
-      <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
-      <nav>
-        <ul>
-          <li><a href="#">Mission</a></li>
-          <li><a href="#">Featured Tea</a></li>
-          <li><a href="#">Locations</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div class="container">
-      <div class="mission">
-        <div class="black_bar">
-          <h2>Our Mission</h2>
-          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-        </div> <!-- end of black bar -->
-      </div>  <!-- end of mission -->
-      <div class="variety">
-        <h2>Tea of the Month</h2>
-        <h4>What's Steeping at The Tea Cozy?</h4>
-        <div class="flex_images">
-          <div class="captionimage_box">
-            <div class="pic fall"><img src="./resources/images/img-berryblitz.jpg" alt="Berry Blitz Tea">
-            <p>Fall Berry Blitz Tea</p>
-            </div>
-
-            <div class="pic spiced"><img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
-            <p>Spiced Rum Tea</p>
-            </div>
-
-            <div class="pic seasonal"><img src="./resources/images/img-donut.jpg" alt="Donut Image">
-            <p>Seasonal Donuts</p>
-            </div>
-
-            <div class="pic myrtle"><img src="./resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
-            <p>Myrtle Ave Tea</p>
-            </div>
-
-            <div class="pic bedford"><img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
-            <p>Bedford Bizarre Tea</p>
-            </div>
-
-          </div> <!-- end of captionimage_box -->
-        </div> <!-- end of flex images -->
-      </div> <!-- end of variety -->
-      <div class="locations">
-          <div id=loc_title><h2>Locations</h2></div>
-          <div class="col_container">
-            <div class="col">
-              <h3>Downtown</h3>
-              <p>384 West 4th St</p>
-              <p>Suite 108</p>
-              <p>Portland, Maine</p>
-            </div>
-            <div class="col">
-              <h3>East Bayside</h3>
-              <p>3433 Phisherman's Avenue</p>
-              <p>(Northwest Coner)</p>
-              <p>Portland, Maine</p>
-            </div>
-            <div class="col">
-              <h3>Oakdale</h3>
-              <p>515 Crescent Avenue</p>
-              <p>Second Floor</p>
-              <p>Portland, Maine</p>
-            </div>
-          </div> <!-- end of col_container -->
-      </div> <!-- end of locations -->
-    </div> <!-- end of container -->
-    <footer>
-      <h2>The Tea Cozy</h2>
-      <h5>contact@theteacozy.com</h5>
-      <h5>917-555-8904</h5>
-    </footer>
-    <p id= "copyright">copyright The Tea Cozy 2017</p>
-  </body>
-</html>
-
+Hello World
