--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Secret Agent Supply Inc.</title>
+    <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="header_logo">
+      <div class="logo">
+        <img src="./resources/images/logo.png" alt="Secret Agecy Logo">
+        <span>SECRET AGENT SUPPLY</span>
+      </div>
+    </div>
+    <!-- main image -->
+    <div id="banner_img">
+      <div class="box_desktop">
+        <div class="text_container">
+          <h3>NEW ARRIVAL</h3>
+          <h2>SPORTS BIKES AND MOTORCYCLES</h2>
+        </div>
+      </div>
+      <div class="box_mobile">
+        <div class="header_mobile">
+          <h3>NEW ARRIVAL</h3>
+          <h2>SPORTS BIKES AND MOTORCYCLES</h2>
+        </div>
+      </div>
+    </div>
+
+    <!-- navigation -->
+    <nav>
+      <div class="nav_container">
+        <ul class="desktop">
+          <li><a href="#">Eyewear</a></li>
+          <li><a href="#">Apparel</a></li>
+          <li><a href="#">Gadgets</a></li>
+          <li><a href="#">Vehicles</a></li>
+          <li><a href="#">Classes</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="mobile">
+          <li><a href="#">Menu</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- products -->
+    <div class="body_container">
+      <div class="flex_images">
+          <div class="product pen">
+            <img src="./resources/images/pen.png" alt="Pen">
+            <p>Exploding Pen</p>
+          </div>
+          <div class="product watch">
+            <img src="./resources/images/watch.png" alt="Watch">
+            <p>Cellular Watch</p>
+          </div>
+          <div class="product glasses">
+            <img src="./resources/images/glasses.png" alt="Glasses">
+            <p>Thermal Glasses</p>
+          </div>
+      </div>
+      <!-- Location & hours -->
+      <div class="box_container">
+        <div class="text_box">
+          <span class="bk_box">Location</span>
+          <span>-47.346436, 84.32354</span>
+        </div>
+        <div class="text_box">
+          <span class="bk_box">Hours</span>
+          <span>0800-1800</span>
+        </div>
+      </div>
+    </div>
+    <!-- footer -->
+    <footer>
+      <p>&copy Copyright Secret Agent Supply Inc.</p>
+    </footer>
+  </body>
+</html>
