fixed linked css files

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Secret Agent Supply Inc.</title>
-    <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
-    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="../resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="../resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="header_logo">
       <div class="logo">
-        <img src="./resources/images/logo.png" alt="Secret Agecy Logo">
+        <img src="./resources/images/logo.png" alt="Secret Agency Logo">
         <span>SECRET AGENT SUPPLY</span>
       </div>
     </div>
